--- a/基本知识/1.紫砂壶的基本情况.md
+++ b/基本知识/1.紫砂壶的基本情况.md
@@ -4,13 +4,44 @@
 
 ### 1.成本分布
 
+一把壶的成本主要由以下几点构成：
+
+* 泥料成本：比较靠谱的价格表如下：
+
+  | 分类 | 价格（元/捆） |
+  | ---- | ------------- |
+  | 中端 | 700-2000      |
+  | 高端 | 5000          |
+  | 极品 | 8000-10000    |
+
+  换算下来中低端的壶泥料成本在50-100元之间，这个区间的壶成品基本价基本上千，半手的也要500以上，泥料的品质其实已经很不错了。如果是成品价在500元以下的壶泥料成本应该在50元以下，其实品质也还可以，就是比较难养出温润感，紫砂特性还是有的。
+
+  高端的泥料一般情况下师傅是不舍得用的（也不是因为泥料稀缺，而是没啥必要用），用的话肯定是做全手工壶，而且不是那种一波做个几把的那种壶，一般来说是壶商为了噱头来找师傅定制的时候才会用。其实换算下来成本也没高多少，主要还是看有没有必要用。
+
+  综上，**紫砂的泥料确实是很重要的一环，但并不是成本大头**，就和书法作品用的纸一个意思，稍好点的壶都不会用太差的泥料的（反正也没多钱），如果有人忽悠你说这泥料多么多么稀缺，听听就得了，别当真。
+
+* 工匠师傅的利润：这一部分才是成本重头；
+
+  
+
+* 经销商的利润：经销商的利润大多都是拿货价的100%左右；毕竟不是刚需，和茶叶不同，客人今年买了明年很有可能就不买了；值得一提的是，除非师傅是弃疗型选手，不然直接找师傅买是不会比经销商便宜的。
+
 ### 2.宜兴泥料分布
 
 ### 3.判断的标准
 
 判断一把紫砂壶的价值，一般有一下几个方面：
 
-* 外观：按照从易到难分为：
+* 外观：
+
+  紫砂壶的外型，是判断价值的重要因素，相比于充满化学知识的泥料来说，要容易掌握一些。
+
+  紫砂壶的外型讲究**形、神、气**；
+
+  神与气太过玄学，与个人的审美也有关，所以没法定论，如果有机会的话我会把我自己对紫砂壶神与气的理解写出来，供大家探讨；
+
+  因此这里我主要总结的是形相关的知识，按照判断从易到难分为：
+
   * 基本要求：
   * 是否为半手工：
   * 做工：
@@ -22,7 +53,7 @@
 
   - 是否是紫砂：一般来说这个还比较好判断，详见后面写的文章4；
   - 是否加了奇怪的材料：这就已经比较难说清了，详见文章4中的化工壶以及泥料相关的文章；
-  - 泥料本身的价值如何：有些泥料被吹成储量稀少，特性异常优秀等等，这虽然很难判断，但是应该明白的是低价的壶不可能用太好的料子，而能卖到上万的壶也不在乎几百的泥钱；所以就是中端的壶应该特别注意，我推荐的方案是不能轻信，应该回去查找详细的图鉴资料，再仔细对比才能下结论；
+  - 泥料本身的价值如何：有些泥料被吹成储量稀少，特性异常优秀等等，这虽然很难判断，但是应该明白的是低价的壶不可能用太好的料子，而能卖到上万的壶也不在乎几百的泥钱；我推荐的方案是不能轻信，应该回去查找详细的图鉴资料，再仔细对比才能下结论；
 
 * 作者：
 
