--- a/基本知识/3.手工与半手工.md
+++ b/基本知识/3.手工与半手工.md
@@ -1,5 +1,7 @@
-# 手工与半手工
+# 半手工紫砂壶
 
-紫砂壶有全手工与半手工之分，主要区别在于身桶是否由模具辅助制作；
+紫砂壶有全手工与半手工之分，主要区别在于身桶、壶盖等部位是否由模具辅助制作；
 
-应当注意的是
+应当注意的是半手工壶并非能够大规模量产的方法，只能一定程度上加大产能，价格上会比全手工
+
+在实用性上与全手工壶无异
