--- a/基本知识/4.假壶.md
+++ b/基本知识/4.假壶.md
@@ -29,7 +29,7 @@
 
 ### 4.化工壶
 
-化工壶是最具争议的一种情况。
+化工壶是最复杂的一种情况。
 
 因为现在很多泥料都会或多或少的添加化学材料，毕竟工艺也是在进步的，有些东西添加了确实对泥料有所提升，有利于降低成本与价格。但是有些东西加了对身体有害，而销售时又以次充好，这种就可以认为是假壶了。下面这把就是比较典型的，泥料颜色邪乎，加之做工粗糙，基本只能拿来养花了。
 
